Ajustes na config de segurança do OAuth2